--- a/src/components/code/code-c/c-base/pages/elem-clib.html
+++ b/src/components/code/code-c/c-base/pages/elem-clib.html
@@ -6,18 +6,41 @@
   <h2>Содержание</h2>
 
   <p><a href="#lib">Стандартные библиотеки языка Си</a></p>
-  <br><a href="#stdio">stdio.h</a>
-  <br><a href="#stdlib">stdlib.h</a>
-  <br><a href="#ctype">ctype.h</a>
-  <br><a href="#string">string.h</a>
-  <br><a href="#limits">limits.h</a>
-  <br><a href="#math">math.h</a>
-  <br><a href="#float">float.h</a>
+
+  <p>Доступные во всех стандартах</p>
   <br><a href="#assert">assert.h</a>
-  <br><a href="#stdarg">stdarg.h</a>
+  <br><a href="#ctype">ctype.h</a>
+  <br><a href="#errno">errno.h</a>
+  <br><a href="#float">float.h</a>
+  <br><a href="#limits">limits.h</a>
+  <br><a href="#locale">locale.h</a>
+  <br><a href="#math">math.h</a>
   <br><a href="#setjmp">setjmp.h</a>
   <br><a href="#signal">signal.h</a>
+  <br><a href="#stdarg">stdarg.h</a>
+  <br><a href="#stddef">stddef.h</a>
+  <br><a href="#stdio">stdio.h</a>
+  <br><a href="#stdlib">stdlib.h</a>
+  <br><a href="#string">string.h</a>
   <br><a href="#time">time.h</a>
+  <br><a href="#wchar">wchar.h</a>
+  <br><a href="#wctype">wctype.h</a>
+  <br><a href="#iso646">iso646.h</a>
+
+  <p>В стандарте C99 добавлены</p>
+  <br><a href="#complex">complex.h</a>
+  <br><a href="#fenv">fenv.h</a>
+  <br><a href="#inttypes">inttypes.h</a>
+  <br><a href="#stdbool">stdbool.h</a>
+  <br><a href="#stdint">stdint.h</a>
+  <br><a href="#tgmath">tgmath.h</a>
+
+  <p>В стандарте C11 добавлены</p>
+  <br><a href="#stdalign">stdalign.h</a>
+  <br><a href="#stdatomic">stdatomic.h</a>
+  <br><a href="#stdnoreturn">stdnoreturn.h</a>
+  <br><a href="#threads">threads.h</a>
+  <br><a href="#uchar">uchar.h</a>
 </article>
 
 
