--- a/src/components/alg/alg-conspect/sp/pages/elem-sp6.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp6.html
@@ -259,12 +259,7 @@ int main() {
 
 using namespace std;
 
-int main() {
-  // входные данные
-  int a, b;
-  cin >> a >> b;
-
-  // решение
+int nod(int a, int b) {
   while (a != 0 && b != 0) {
     if (a > b) {
       a = a % b;
@@ -272,9 +267,19 @@ int main() {
       b = b % a;
     }
   }
+  return a + b;
+}
+
+int main() {
+  // входные данные
+  int a, b;
+  cin >> a >> b;
+
+  // решение
+  int res = nod(a, b);
 
   // вывод результата
-  cout &lt;&lt; a + b;
+  cout &lt;&lt; res;
 }
 </pre>
   </details>
@@ -404,6 +409,35 @@ int main() {
   <h4>Пример</h4>
   <code>4</code>
   <code>24</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+long long fakt(long long a) {
+  if (a == 1) {
+    return 1;
+  } else {
+    return a * fakt(a-1);
+  }
+}
+
+int main() {
+  // входные данные
+  long long n;
+  cin >> n;
+
+  // решение
+  long long res = fakt(n);
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -430,6 +464,37 @@ int main() {
   <h4>Пример 2</h4>
   <code>12 8</code>
   <code>3</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int kvadr(int a, int b) {
+  if (a == b) {
+    return 1;
+  } else if (a > b) {
+    return 1 + kvadr(a  - b, b);
+  } else {
+    return 1 + kvadr(b - a, a);
+  }
+}
+
+int main() {
+  // входные данные
+  int a, b;
+  cin >> a >> b;
+
+  // решение
+  int res = kvadr(a, b);
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -561,6 +626,158 @@ int main() {
 </pre>
   <code>4</code>
   <p>Во втором примере в массив нужно добавить числа 4, 5, 5, 5. В получившемся массиве медиана равна 4</p>
+
+  <details>
+    <summary>Еще примеры</summary>
+
+  <h4>Пример 3 (x > A[n-1])</h4>
+<pre>
+4 2
+1 1 1 1
+</pre>
+  <code>5</code>
+
+  <h4>Пример 4 (x &lt; A[0])</h4>
+<pre>
+4 1
+2 2 2 2
+</pre>
+  <code>4</code>
+
+  <h4>Пример 6 (x &lt; m)</h4>
+<pre>
+3 1
+1 2 2
+</pre>
+  <code>1</code>
+<pre>
+4 1
+1 2 2 2
+</pre>
+  <code>2</code>
+<pre>
+5 1
+1 2 2 2 2
+</pre>
+  <code>3</code>
+<pre>
+6 1
+1 2 2 2 2 2
+</pre>
+  <code>4</code>
+
+  <h4>Пример 7 (x > m)</h4>
+<pre>
+3 2
+1 1 2
+</pre>
+  <code>2</code>
+<pre>
+4 2
+1 1 1 2
+</pre>
+  <code>3</code>
+<pre>
+5 2
+1 1 1 1 2
+</pre>
+  <code>4</code>
+<pre>
+6 2
+1 1 1 1 1 2
+</pre>
+  <code>5</code>
+
+  <h4>Пример 8 (x = m)</h4>
+<pre>
+5 3
+1 2 3 4 5
+</pre>
+  <code>0</code>
+<pre>
+6 3
+1 2 3 4 5 6
+</pre>
+  <code>0</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // входные данные
+  int n, x;
+  cin >> n >> x;
+
+  // собираем входной массив
+  vector&lt;int&gt; A(0);
+  int temp;
+  for (int i = 0; i &lt; n; i++) {
+    cin >> temp;
+    A.push_back(temp);
+  }
+
+  // решение
+  // сортируем
+  sort(A.begin(), A.end());
+
+  // находим медиану
+  int ind = (n + 1) / 2 - 1;
+  int med = A[ind];
+  int count = 0;
+
+  // всего 5 случаев
+  // 1) если x больше всех элементов
+  if (x > A[n - 1]) {
+    count = n + 1;
+
+  // 2) если x меньше всех элементов
+  } else if (x &lt; A[0]) {
+    count = n;
+
+  // 3) если x &lt; med
+  } else if (x &lt; med) {
+    int c = 0;
+    // пока x меньше медианы
+    while (x &lt; med) {
+      c++;
+      med = A[ind - c];
+    }
+    if (n % 2) {
+      count = c * 2 - 1;
+    } else {
+      count = c * 2;
+    }
+
+  // 4) если x > med
+  } else if (x > med) {
+    int c = 0;
+    // пока x больше медианы
+    while (x > med) {
+      c++;
+      med = A[ind + c];
+    }
+    if (n % 2) {
+      count = c * 2;
+    } else {
+      count = c * 2 - 1;
+    }
+  }
+
+  // 5) если x == med, то оставляем count == 0
+
+  // вывод результата
+  cout &lt;&lt; count;
+}
+
+</pre>
+  </details>
 </article>
 
 
@@ -672,6 +889,52 @@ int main() {
 3 1
 </pre>
   <code>7</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+bool compare(const pair&lt;int, int&gt;& a, const pair&lt;int, int&gt;& b) {
+  return a.second > b.second;
+}
+
+int main() {
+  // ввод данных
+  int n, m;
+  cin >> n >> m;
+
+  vector&lt;pair&lt;int, int&gt; &gt; A(m);
+  for (int i = 0; i &lt; m; i++) {
+    cin >> A[i].first >> A[i].second;
+  }
+
+  // решение
+  sort(A.begin(), A.end(), compare);
+  int res = 0;
+  int ost = n;
+
+  for (auto& cont : A) {
+    int a = cont.first;
+    int b = cont.second;
+
+    if (ost &lt;= 0) {
+      break;
+    }
+
+    int take = min(a, ost);
+    res += take * b;
+    ost -= take;
+  }
+
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -731,6 +994,47 @@ int main() {
 0
 </pre>
   <p>В третьем тесте у Amr недостаточно времени для того, чтобы научиться играть на единственном данном инструменте.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+bool compare(const pair&lt;int, int&gt;& a, const pair&lt;int, int&gt;& b) {
+  return b.second > a.second;
+}
+
+int main() {
+  // ввод данных
+  int n, k;
+  cin >> n >> k;
+
+  vector&lt;pair&lt;int, int&gt; &gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    A[i].first = i;
+    cin >> A[i].second;
+  }
+
+  // решение
+  sort(A.begin(), A.end(), compare);
+  int res = 0;
+
+  while (res &lt; n && (k -= A[res].second) >= 0) {
+    res++;
+  }
+
+  // вывод результата
+  cout &lt;&lt; res &lt;&lt; '\n';
+  for (int i = 0; i &lt; res; i++) {
+    cout &lt;&lt; A[i].first + 1 &lt;&lt; ' ';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -1069,6 +1373,7 @@ int main() {
     <p>Перебираем все пары и смотрим за какое количество шагов мы из пары (x,n) придем к паре (1,1). Выберем минимальное количество шагов.</p>
 <pre>
 #include &lt;iostream&gt;
+#include &lt;algorithm&gt;
 
 using namespace std;
 
@@ -1077,11 +1382,10 @@ long long cnt;
 long long gcd(long long a, long long b) {
   if (b == 0) {
     if (a != 1) {
-      cnt += 1000000;
-    } else {
-      cnt += a - 1;
-      return a;
+      cnt += 1'000'000;
     }
+    cnt += a - 1;
+    return a;
   } else {
     cnt += a / b;
     return gcd(b, a % b);
@@ -1091,17 +1395,18 @@ long long gcd(long long a, long long b) {
 int main() {
   long long n;
   cin >> n;
-  long long min_count = 1000000;
+  long long min_count = 10'000'000;
   for (long long i = 1; i &lt; n; i++) {
     cnt = 0;
     gcd(n, i);
     min_count = min(min_count, cnt);
   }
-  if (min_count == 1000000) {
+  if (min_count == 10'000'000) {
     cout &lt;&lt; 0;
-  } else {
-    cout &lt;&lt; min_count - 1;
+    return 0;
   }
+
+  cout &lt;&lt; min_count - 1;
 }
 </pre>
   </details>
